<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progressBar"
    style="@style/Appgeneral"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Textemail"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="-200dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/Idescriptor" />


        <android.support.design.widget.TextInputEditText
            android:id="@+id/Textemail"
            style="@style/Editlogin"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"></android.support.design.widget.TextInputEditText>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/TextPassword"
            style="@style/Editlogin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingTop="30dp">

        </android.support.design.widget.TextInputEditText>


        <Button
            android:id="@+id/login_user"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:onClick="login_user_click"
            android:text="@string/login_button"
            android:textColor="@color/font_color" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextPassword"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>